--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,7 +9,11 @@
 	"compatibility_date": "2025-05-31",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"vars": {
+    "PUBLIC_KEY": "pede ao adm"
+  	}
+	
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
